# schoolStackPro

./: .env  .gitignore  README.md  agent.md  creds  db.sqlite3  design_pattern.md  internal-commands.md  manage.py  private_key.pem  public_key.pem  pyproject.toml  requirements.txt  verify_all_permissions_middleware.py  verify_staff_permissions.py
certificateApp/: admin.py  apps.py  models.py  qr.py  services.py  studio_ux_blueprint.md  urls.py  views.py
chatApp/: admin.py  apps.py  context_processors.py  models.py  services.py  urls.py  views.py
financeApp/: admin.py  apps.py  models.py  services.py  tests.py
homeApp/: admin.py  apps.py  audit.py  auth_services.py  branding.py  context_processors.py  license.py  middleware.py  model_mixins.py  models.py  owner_access.py  push_service.py  session_utils.py  signals.py  tests.py  urls.py  utils.py  views.py
hostelApp/: admin.py  apps.py  models.py  portal_services.py  urls.py  views.py
inventoryApp/: models.py  tests.py  urls.py  views.py
libraryApp/: admin.py  apps.py  models.py  services.py  urls.py  views.py
managementApp/: access_control.py  admin.py  apps.py  holiday_utils.py  leave_utils.py  models.py  notification_utils.py  reporting.py  signals.py  tests.py  urls.py  views.py
schoolApp/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
schoolStackPro/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
static/: manifest.json
studentApp/: data_utils.py  urls.py  views.py
teacherApp/: admin.py  models.py  urls.py  views.py
transportApp/: admin.py  models.py  portal_services.py  (+2 more)
(+293 files in other folders)
