[project]
name = "schoolstackpro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django==5.2.10",
    "django-datatables-view>=1.20.0",
    "django-dynamic-filenames>=1.4.1",
    "django-pwa>=2.0.1",
    "django-redis>=6.0.0",
    "django-stdimage==6.0.2",
    "gunicorn>=23.0.0",
    "mysqlclient>=2.2.7",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
